--- a/components/Firma/Firma.scss
+++ b/components/Firma/Firma.scss
@@ -23,23 +23,28 @@
 
     &__content {
         display: flex;
-        flex-flow: row wrap;
+        flex-flow: column wrap;
         width: 100%;
+        padding: 3em;
 
             @include tablet {
                 width: 50%;
+                border-right: $border;
             }
 
             @include desktop {
                 width: 50%;
+                border-right: $border;
             }
 
             @include desktopXL {
                 width: 50%;
+                border-right: $border;
             }
 
         &--text {
             width: 100%;
+            margin: 1em 0em 1em 0em;
 
             span {
                width: 100%; 
