--- a/components/Map/Map.scss
+++ b/components/Map/Map.scss
@@ -11,23 +11,34 @@
 
     &__content {
         display: flex;
-        flex-flow: row wrap;
+        flex-flow: column wrap;
+        justify-content: left;
         width: 100%;
+        padding: 3em;
 
             @include tablet {
                 width: 50%;
+                border-right: $border;
             }
 
             @include desktop {
                 width: 50%;
+                border-right: $border;
             }
 
             @include desktopXL {
                 width: 50%;
+                border-right: $border;
             }
 
             &--text {
                 width: 100%;
+                margin-bottom: 1em;
+
+                &:last-child {
+                    margin-bottom: 0em;
+                }
+
             }
     }
 
