--- a/components/Firma/Firma.scss
+++ b/components/Firma/Firma.scss
@@ -9,23 +9,10 @@
     height: auto;
     border-bottom: $border;
 
-        // @include tablet {
-        //     height: auto;
-        // }
-
-        // @include desktop {
-        //     height: auto;
-        // }
-
-        // @include desktopXL {
-        //     height: auto;    
-        // }
-
     &__content {
         display: flex;
         flex-flow: column wrap;
         width: 100%;
-        padding: 3em;
 
             @include tablet {
                 width: 50%;
@@ -42,17 +29,76 @@
                 border-right: $border;
             }
 
-        &--text {
-            width: 100%;
-            margin: 1em 0em 1em 0em;
+        &--title {
+            border-bottom: $border;
+            padding-left: 24px;
+            height: 6.5vh;
+        }
 
-            span {
-               width: 100%; 
+        .text__big {
+            width: 100%;
+            margin: 1.5em 0em 1.5em 0em;
+            padding-left: 24px;
+            height: 33.5vh;
+
+            @include tablet {
+                width: 90%;
+                height: 38.5vh;
             }
-            
-            .text__big {
-                margin-top: 1em;
-            }    
+
+            @include desktop {
+                width: 90%;
+                height: 38.5vh;
+            }
+
+            @include desktopXL {
+                width: 85%;
+                height: 35vh;
+            }
+        }
+
+        &--space {
+            display: flex;
+            flex-flow: row wrap;
+            border-top: $border;
+            border-bottom: $border;
+            width: 100%;
+            height: 10vh;
+
+            @include tablet {
+                border-bottom: none;
+                height: 7.5vh;
+            }
+
+            @include desktop {
+                border-bottom: none;
+                height: 7.5vh;
+            }
+
+            @include desktopXL {
+                border-bottom: none;
+            }
+
+            .space__item {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                width: 50%;
+                border-right: $border;
+
+                h1 {
+                    font-weight: 300;
+                }
+
+                &:first-child {
+                    background: rgb(55,114,255);
+                    background: radial-gradient(circle, rgba(55,114,255,1) 0%, rgba(9,9,121,0) 95%);
+                }
+
+                &:last-child {
+                    border-right: none;
+                }
+            }
         }
 
         &--image {
@@ -60,6 +106,7 @@
             height: 500px;
             object-fit: cover;
             width: 100%;
+            padding: 12px;
 
             @include tablet {
                 width: 50%;
