--- a/components/Person/Person.scss
+++ b/components/Person/Person.scss
@@ -9,47 +9,96 @@
     height: auto;
     border-bottom: $border;
 
-        // @include tablet {
-        //     height: auto;
-        // }
-
-        // @include desktop {
-        //     height: auto;
-        // }
-
-        // @include desktopXL {
-        //     height: auto;    
-        // }
-
     &__content {
         display: flex;
         flex-flow: column wrap;
         width: 100%;
-        padding: 3em;
 
             @include tablet {
-                width: 50%;
+                width: calc(50% + 1px);
+                border-left: $border;
             }
 
             @include desktop {
-                width: 50%;
+                width: calc(50% + 1px);
+                border-left: $border;
             }
 
             @include desktopXL {
-                width: 50%;
-            }  
-
-        &--text {
-            width: 100%;
-            margin: 1em 0em 1em 0em;
-
-            span {
-               width: 100%; 
-            }
+                width: calc(50% + 1px);
+                border-left: $border;
+            } 
             
-            .text__big {
-                margin-top: 1em;
-            }    
+        &--title {
+            border-bottom: $border;
+            padding-left: 24px;
+            height: 6.5vh;
+        }    
+
+        .text__big {
+            width: 100%;
+            margin: 1.5em 0em 1.5em 0em;
+            padding-left: 24px;
+            height: 33vh;
+
+            @include tablet {
+                width: 90%;
+                height: 38.5vh;
+            }
+
+            @include desktop {
+                width: 90%;
+                height: 38.5vh;
+            }
+
+            @include desktopXL {
+                width: 85%;
+                height: 35vh;
+            }
+        }
+
+        &--space {
+            display: flex;
+            flex-flow: row wrap;
+            border-top: $border;
+            border-bottom: $border;
+            width: 100%;
+            height: 10vh;
+
+            @include tablet {
+                border-bottom: none;
+                height: 7.5vh;
+            }
+
+            @include desktop {
+                border-bottom: none;
+                height: 7.5vh;
+            }
+
+            @include desktopXL {
+                border-bottom: none;
+            }
+
+            .space__item {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                width: 33.333333%;
+                border-right: $border;
+
+                h1 {
+                    font-weight: 300;
+                }
+
+                &:nth-child(2n) {
+                    background: rgb(55,114,255);
+                    background: radial-gradient(circle, rgba(55,114,255,1) 0%, rgba(9,9,121,0) 95%);
+                }
+
+                &:last-child {
+                    border-right: none;
+                }
+            }
         }
 
         &--image {
@@ -57,20 +106,18 @@
             height: 500px;
             object-fit: cover;
             width: 100%;
+            padding: 12px;
 
             @include tablet {
-                width: 50%;
-                border-right: $border;
+                width: calc(50% - 1px);
             }
 
             @include desktop {
-                width: 50%;
-                border-right: $border;
+                width: calc(50% - 1px);
             }
 
             @include desktopXL {
-                width: 50%;
-                border-right: $border;
+                width: calc(50% - 1px);
             }
         }
     }
