[Fix]: Update reset file

--- a/assets/css/reset/_reset.scss
+++ b/assets/css/reset/_reset.scss
@@ -8,7 +8,7 @@ github.com/necolas/normalize.css
   padding: 0;
   border: none;
   box-sizing: border-box;
-  list-style: none;
+  // list-style: none;
 }
 
 /**
