--- a/components/Anfrage/Anfrage.scss
+++ b/components/Anfrage/Anfrage.scss
@@ -10,11 +10,23 @@
     border-bottom: $border;
 
     .spacer__item {
-        display: flex;
+        display: none;
         justify-content: center;
         align-items: center;
         width: 33.333%;
         border-right: $border;
+
+        @include tablet {
+            display: flex;
+        }
+
+        @include desktop {
+            display: flex;
+        }
+
+        @include desktopXL {
+            display: flex;
+        }
 
         h1 {
             font-weight: 300;
@@ -43,7 +55,7 @@
         display: flex;
         flex-flow: column wrap;
         justify-content: center;
-        width: 66.666%;
+        width: 100%;
         height: 30vh;
 
             @include tablet {
@@ -84,6 +96,7 @@
             &:hover {
                 color: $blue;
                 background-color: $white;
+                cursor: pointer;
             }
         }
     }
