[Add]: Hover to navigation

--- a/components/Navigation/Navigation.scss
+++ b/components/Navigation/Navigation.scss
@@ -77,6 +77,12 @@
             &:last-child {
                 border-right: none;
             }
+
+            &:hover {
+                color: $blue;
+                background-color: $white;
+                cursor: pointer;
+            }
         }
     }
 }
