--- a/components/Anfrage/Anfrage.scss
+++ b/components/Anfrage/Anfrage.scss
@@ -13,8 +13,7 @@
         display: none;
         justify-content: center;
         align-items: center;
-        width: 33.333%;
-        border-right: $border;
+        width: 33.3%;
 
         @include tablet {
             display: flex;
@@ -56,38 +55,40 @@
         flex-flow: column wrap;
         justify-content: center;
         width: 100%;
-        height: 30vh;
 
             @include tablet {
-                width: 66.666%;
+                width: 66.6%;
+                border-left: $border;
             }
 
             @include desktop {
-                width: 66.666%;
+                width: 66.6%;
+                border-left: $border;
             }
 
             @include desktopXL {
-                width: 66.666%;
+                width: 66.6%;
+                border-left: $border;
             }
         
         &--title {
             width: 100%;
-            height: 6.5vh;
+            height: 6.25vh;
             border-bottom: $border;
             padding-left: 24px;
         }    
 
         &--text {
             width: 100%;
-            height: 17vh;
+            height: 18.75vh;
             border-bottom: $border;
             padding: 24px 0px 0px 24px;
   
         }
         &--button {
             display: flex;
-            width: 50%;
-            height: 6.5vh;
+            width: calc(50% + 0.5px);
+            height: 6.25vh;
             align-items: center;
             justify-content: center;
             color: $black;
