--- a/components/Person/Person.scss
+++ b/components/Person/Person.scss
@@ -32,28 +32,28 @@
         &--title {
             border-bottom: $border;
             padding-left: 24px;
-            height: 6.5vh;
+            height: 6.25vh;
         }    
 
         .text__big {
             width: 100%;
             margin: 1.5em 0em 1.5em 0em;
             padding-left: 24px;
-            height: 33vh;
+            height: 31.25vh;
 
             @include tablet {
                 width: 90%;
-                height: 38.5vh;
+                height: 31.25vh;
             }
 
             @include desktop {
                 width: 90%;
-                height: 38.5vh;
+                height: 31.25vh;
             }
 
             @include desktopXL {
                 width: 85%;
-                height: 35vh;
+                height: 31.25vh;
             }
         }
 
@@ -63,20 +63,21 @@
             border-top: $border;
             border-bottom: $border;
             width: 100%;
-            height: 10vh;
+            height: calc(12.5vh + 12px);
 
             @include tablet {
                 border-bottom: none;
-                height: 7.5vh;
+                height: calc(12.5vh + 12px);
             }
 
             @include desktop {
                 border-bottom: none;
-                height: 7.5vh;
+                height: calc(12.5vh + 12px);
             }
 
             @include desktopXL {
                 border-bottom: none;
+                height: calc(12.5vh + 12px);
             }
 
             .space__item {
