[Fix]: Mobile usability Nav and Article

--- a/components/Articles/Articles.scss
+++ b/components/Articles/Articles.scss
@@ -61,7 +61,7 @@
         &--text {
             margin: 1em 0em 1em 0em;
             padding-left: 24px;
-            height: 43.75vh;
+            min-height: 43.75vh;
         }
     }
 }
