--- a/components/CookieBox/CookieBox.scss
+++ b/components/CookieBox/CookieBox.scss
@@ -6,74 +6,57 @@
     position: fixed;
     display: flex;
     flex-flow: row wrap;
-    justify-content: center;
     align-items: center;
-    width: auto;
     height: 45px;
-    background-color: $black;
-    top: 5em;
+    background-color: $white;
+    border: $border;
+    width: 25%;
     left: 0;
     right: 0;
-    margin-left: 1em;
-    margin-right: 1em;
-    border-radius: 20px;
-    padding: 0.25em;
-    animation: pulse 1s ease-in infinite;
+    // animation: pulse 1s ease-in infinite;
 
     @include tablet {
         flex-flow: row wrap;
-        right: $contentpaddingLarge;
-        left: auto;
-        top: 5em;
-        width: 250px;
         height: 75px;
-        padding: 0.5em;
         margin-right: 0em;
     }
 
     @include desktop {
         flex-flow: row wrap;
-        right: $contentpaddingLarge;
-        left: auto;
-        top: 5em;
-        width: 300px;
         height: 75px;
-        padding: 0.5em;
         margin-right: 0em;
     }
 
     @include desktopXL {
-        flex-flow: row wrap;
-        right: $contentpaddingLarge;
-        left: auto;
-        top: 5em;
-        width: 300px;
+        flex-flow: row nowrap;
         height: 75px;
-        padding: 0.5em;
         margin-right: 0em;
     }
 
+    .message__container {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        // border-right: $border;
+        height: 100%;
+        width: 75%;
+    }
+
     p {
-        color: white;
-        text-align: center;
-        margin-right: 1em;
+        color: $black;
         font-size: 12px;
+        width: 100%;
+        text-align: center;
 
         @include tablet {
-            width: 100%;
-            margin-right: 0em;
             font-size: 14px;
         }
 
         @include desktop {
-            width: 100%;
-            margin-right: 0em;
             font-size: 14px;
         }
 
         @include desktopXL {
-            width: 100%;
-            margin-right: 0em;
             font-size: 14px;
         }
     }
@@ -82,47 +65,24 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        width: auto;
-        background-color: $black;
-        border: thin solid $white;
-        color: $white;
-        border-radius: 200px;
-        padding-left: 0.5em;
-        padding-right: 0.5em;
+        border: $border;
+        padding: 5px 20px 5px 20px;
+        width: 100%;
         cursor: pointer;
 
-        @include tablet {
-            margin-left: 1em;
-        }
-
-        @include desktop {
-            margin-left: 1em;
-        }
-
-        @include desktopXL {
-            margin-left: 1em;
-        }
-
         &:hover {
-            background-color: $white;
+            border: thin solid $blue;
 
             .accept__text {
-                color: $black;
+                color: $blue;
             }
         }
     }
 
     .accept__text {
         margin-right: 0em;
-    }
-
-    .btn-link p {
-        color: $white;
-        text-decoration: underline;
-
-        &:hover {
-            font-style: italic;
-        }
+        color: $black;
+        text-align: center;
     }
 }
 
