--- a/components/Header/Header.scss
+++ b/components/Header/Header.scss
@@ -6,6 +6,7 @@
 
     &__content {
         display: flex;
+        flex-flow: column wrap;
         background-color: $white;
         width: 100%;
         height: 75vh;
@@ -23,14 +24,90 @@
             height: 93.75vh;
         }
 
+
+        &--top {
+            display: flex;
+            flex-flow: row nowrap;
+            align-items: center;
+            background-color: white;
+            border-bottom: $border;
+            height: 12.5vh;
+            width: 100%;
+        }
+
+        .logo__container {
+            display: flex;
+            align-items: center;
+            border-right: $border;
+            width: 45%;
+            height: 12.5vh;
+            padding-left: 12px;
+            padding-right: 12px;
+
+            @include tablet {
+                width: 35%;
+                padding-left: 24px;
+                padding-right: 24px;
+            }
+        
+            @include desktop {
+                width: 25%;
+                padding-left: 24px;
+                padding-right: 24px;
+            }
+        
+            @include desktopXL {
+                width: 25%;
+                padding-left: 24px;
+                padding-right: 24px;
+            }
+        }
+
+        .spacer {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 45%;
+            border-right: $border;
+            height: 12.5vh;
+
+            @include tablet {
+                width: 55%;
+            }
+        
+            @include desktop {
+                width: 65%;
+            }
+        
+            @include desktopXL {
+                width: 65%;
+            }
+
+            &:last-child{
+                width: 20%;
+
+                @include tablet {
+                    width: 15%;
+                }
+            
+                @include desktop {
+                    width: 10%;
+                }
+            
+                @include desktopXL {
+                    width: 10%;
+                }
+            }
+        }
+
         &--logo {
-            position: absolute;
-            width: 15vw;
+            width: 100%;
         }
 
         &--image {
             object-fit: cover;
             width: 100vw;
+            height: calc(81.25vh - 1px);
         }
     }
 }
