[Fix]: Breakpoints and styling for small mobile

--- a/assets/css/main/_breakpoints.scss
+++ b/assets/css/main/_breakpoints.scss
@@ -14,7 +14,7 @@ $desktopXL-width: 1440.02px;
 }
 
 @mixin mobile {
-  @media (max-width: #{$phone-width}) {
+  @media (min-width: #{$phoneXS-width}) and (max-width: #{$tablet-width}) {
     @content;
   }
 }
