--- a/components/Header/Header.scss
+++ b/components/Header/Header.scss
@@ -107,7 +107,19 @@
         &--image {
             object-fit: cover;
             width: 100vw;
-            height: calc(81.25vh - 1px);
+            height: calc(62.5vh - 1px);
+
+            @include tablet {
+                height: calc(81.25vh - 1px);
+            }
+        
+            @include desktop {
+                height: calc(81.25vh - 1px);
+            }
+        
+            @include desktopXL {
+                height: calc(81.25vh - 1px);
+            }
         }
     }
 }
