--- a/components/Anfrage/Anfrage.scss
+++ b/components/Anfrage/Anfrage.scss
@@ -80,11 +80,15 @@
 
         &--text {
             width: 100%;
-            height: 18.75vh;
+            min-height: 18.75vh;
             border-bottom: $border;
             padding: 24px 0px 0px 24px;
-  
+
+            @include mobileXS {
+                padding-bottom: 12px;
+            }
         }
+
         &--button {
             display: flex;
             width: calc(50% + 0.5px);
